# BirdWatcher

./: .gitignore  pyproject.toml
BirdCheckerNet/: FineTuner.py
BirdWatcherPi/: pyproject.toml
BirdWatcherPi/tests/: test_birdwatcherpi.py
ImageNetProcessor/: ImageNetResizer.py  ImageNetSifter.py  ImageNetTensorFier.py  ImagenetTarExtractor.py  birdlabel_decider.py  imagenetTarSifter.py
